--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,10 @@
-@(message:String)
+@(message:String, result:List[PersonForm.PersonData])
 
-@main("Index Page","Hello","copyright 2020"){
+@main("Index, Page", "Hello" ,"copyright 2020"){
   <p>@Html(message)</p>
+  <ul>
+    @for(item<-result){
+      <li>@item.name: @item.mail (@item.tel)</li>
+    }
+  </ul>
 }
